Changed the Placement of Dark Mode Toggle and CSS Fixes

--- a/style.css
+++ b/style.css
@@ -1,23 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+
 body {
   font-size: 16px;
   color: #e5e0e0;
   background-image: linear-gradient(to bottom, #655d8a 30%, #7897ab 70%);
   font-family: 'Poppins', sans-serif;
 }
+
 main {
-  display: flex; 
+  display: flex;
   justify-content: center;
   align-items: flex-start;
   height: 100vh;
 }
+
 section {
   padding: 50px 10px;
   display: flex;
   flex-direction: column;
 }
 
-header h3 {
+header h2 {
   text-align: center;
   text-transform: uppercase;
   padding: 15px;
@@ -30,25 +33,32 @@ form {
   align-items: center;
   margin-left: 60px;
 }
-.toggle-dark{
+
+.toggle-dark {
   display: block;
-  width: 100px;
   padding: 15px;
   margin: auto;
   border-radius: 5px;
   border: none;
+  float: right;
 }
-.dark-mode{
+
+.dark-mode {
   background-image: linear-gradient(to bottom, #403f42 30%, #1b80c3 70%);
   color: red;
 }
-.toggle-dark:hover {background-color: #8e3e75}
+
+.toggle-dark:hover {
+  background-color: #8e3e75;
+  cursor: pointer;
+}
 
 .toggle-dark:active {
   background-color: #b736d4;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
+
 .todoInput {
   height: 45px;
   padding: 1px 20px;
@@ -61,21 +71,22 @@ form {
 }
 
 .add {
-  padding: 11px 13px;
-  text-transform: uppercase;
-  font-weight: bolder;
-  background-color: #655d8a;
-  color: #f6f7f8;
+  font-size: 38px;
   border: none;
-  outline: none;
+  color: #1b80c3;
+  background: white;
+  border-radius: 10px;
 }
+
 .todos {
   padding: 15px 0px;
   list-style: none;
 }
+
 .add:hover {
   cursor: pointer;
 }
+
 .todoDiv {
   background-color: white;
   color: #000;
@@ -110,12 +121,20 @@ form {
   border: none;
   outline: none;
 }
+
 .edit {
   background-color: transparent;
   padding: 4px 6px;
   color: #fff;
   border: none;
   outline: none;
+}
+
+.done:hover,
+.trash:hover,
+.edit:hover {
+  scale: 1.1;
+  cursor: pointer;
 }
 
 .completed {
@@ -139,15 +158,18 @@ img {
   color: white;
   margin-left: 70px;
 }
+
 li {
   list-style-type: none;
   padding-left: 20px;
   text-transform: capitalize;
 }
-.invisible{
+
+.invisible {
   display: none;
 }
-.editInput{
+
+.editInput {
   height: 45px;
   padding: 1px 20px;
   outline-color: #073664;
@@ -155,8 +177,9 @@ li {
   font-size: 16px;
   border: none;
   border-radius: 20px;
-  margin-right: 10px; 
+  margin-right: 10px;
 }
-.beingEdited{
-  box-shadow:0px 0px 3px 3px lightblue;
+
+.beingEdited {
+  box-shadow: 0px 0px 3px 3px lightblue;
 }
